gazelle/js/tests/parse_errors/subdir/subdir-bad.ts
export default {
    // foo
    bad SyntaxError on line 3()
}